# cerian

./: .gitignore  Makefile  Schedule.py  decorators.py  main.py  pyproject.toml
.github/workflows/: test.yml
cerian/: cerian.py  decorators.py  main.py  schedule.py  util.py
src/: decorators.py  main.py  schedule.py
tests/: conftest.py  test_decorators.py  test_periodic.py  test_schedule.py
tests/test_schedule/: test_periodic.py  test_schedule.py
